--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.epam.bigdata2016.minskq3</groupId>
     <artifactId>SparkApp</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <properties>
         <spark.version>2.0.0</spark.version>
     </properties>
